[tool.poetry]
name = "usi"
version = "0.1.0"
description = "Python bindings for USI."
authors = ["Karsten Jeschkies <k@jeschkies.xyz>"]

[tool.poetry.scripts]
usi-example = "usi.main:main"

[tool.poetry.dependencies]
grpcio = "~1.23"
protobuf = "~3.9"
python = "^3.7"

[tool.poetry.dev-dependencies]
grpcio-tools = "~1.23"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
